fix(layout): remove text align to left style

--- a/packages/layout/src/assets/css/components/sidebar.css
+++ b/packages/layout/src/assets/css/components/sidebar.css
@@ -48,10 +48,6 @@
   opacity: 1;
 }
 
-.sidebar-menu a {
-  text-align: left !important;
-}
-
 @media screen and (max-width: 576px) {
   .sidebar-menu {
     display: none;
